--- a/css/style.css
+++ b/css/style.css
@@ -107,3 +107,150 @@ html {
       opacity: 100%;
       text-decoration: underline;
     }
+
+    .intro {
+        background: url(../assets/img/background.jpg) no-repeat center;
+        background-size: cover;
+        padding-top: 231px;
+      }
+      
+      .intro_h1{
+        font-weight: bold;
+        font-size: 64px;
+        line-height: 75px;
+        display: flex;
+        align-items: center;
+        text-align: center;
+        letter-spacing: 4.5px;
+        text-transform: uppercase;
+        color: #FFFFFF;
+        margin-bottom: 36px;
+        justify-content: center;
+      }
+      
+      .intro_p {
+        max-width: 504px;
+        font-weight: normal;
+        font-size: 18px;
+        line-height: 140%;
+        text-align: center;
+        color: #FFFFFF;
+        text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
+        justify-content: center;
+        margin: 0 auto;
+        margin-bottom: 36px;
+      }
+      
+      .intro_button {
+        display: flex;
+        justify-content: center;
+      }
+      
+      .intro_submit_button {
+        padding: 15px 47px;
+        font-weight: bold;
+        font-size: 14px;
+        line-height: 16px;
+        text-transform: uppercase;
+        color: #FFFFFF;
+        background: #00AFDB;
+        border: 0;
+        margin-bottom: 183px;
+      }
+      
+      .intro_submit_button:hover, .intro_submit_button:focus, .intro_submit_button:active {
+        background: #0b86a5;
+      }
+      
+      .contacts_list {
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+        padding-bottom: 97px;
+      }
+      
+      .mail {
+        margin-left: 40px;
+      }
+      .mail, .face, .insta, .teleg {
+        width: 170px;
+        height: 20px;
+        opacity: 75%;
+      }
+      
+      .contacts_link:hover, .contacts_link:focus, .contacts_link:active {
+        opacity: 100%;
+      }
+      
+      .contacts_item {
+        margin-right: 30px;
+      }
+
+      .rappresent {
+        background: url(../assets/img/background-2.jpg) no-repeat center;
+        background-size: cover;
+        padding-top: 8px;
+      }
+      
+      .rappresent_wrapper {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 1600px;
+        height: 842px;
+      }
+      
+      .rappresent_item {
+        margin-top: 295px;
+        margin-bottom: 314px;
+        margin-left: 268px;
+        align-items: center;
+        height: 233px;
+        width: 407px;
+      }
+      
+      .rappresent_h2{
+        font-weight: bold;
+        font-size: 24px;
+        line-height: 28px;
+        display: flex;
+        align-items: flex-end;
+        letter-spacing: 1px;
+        text-transform: uppercase;
+        margin-bottom: 20px;
+      }
+      
+      .rappresent_p {
+        font-weight: normal;
+        font-size: 14px;
+        line-height: 140%;
+        margin-bottom: 30px;
+      }
+      
+      .rappresent_button {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: right;
+      }
+      
+      .rappresent_submit_button {
+        padding: 15px 47px;
+        font-weight: bold;
+        font-size: 14px;
+        line-height: 16px;
+        text-transform: uppercase;
+        color: #FFFFFF;
+        background: #00AFDB;
+        border: 0;
+        margin-bottom: 183px;
+      }
+      
+      .rappresent_submit_button:hover, .rappresent_submit_button:focus, .rappresent_submit_button:active {
+        background: #0b86a5;
+      }
+      
+      .rappresent_image {
+        margin: 120px 270px 140px 248px;
+      }
+    
