--- a/css/style.css
+++ b/css/style.css
@@ -254,3 +254,102 @@ html {
         margin: 120px 270px 140px 248px;
       }
     
+      .our_community {
+        background: url(../assets/img/our_community.jpg) no-repeat center;
+        background-size: cover;
+        padding-top: 8px;
+      }
+      
+      .our_community_wrapper {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 1600px;
+        height: 504px;
+      }
+      .our_community_item_text {
+        margin-top: 155px;
+        margin-bottom: 174px;
+        margin-left: 269px;
+        margin-right: 120px;
+      }
+      .our_community_item {
+        align-items: center;
+      }
+      
+      .our_community_img {
+        display: flex;
+        justify-content: center;
+        margin-bottom: 20px;
+        margin-left: 127px;
+      }
+      
+      .our_community_h2 {
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 20px;
+        display: flex;
+        align-items: center;
+        text-align: center;
+        letter-spacing: 2.4px;
+        text-transform: uppercase;
+        color: #373737;
+        margin-left: 69px;
+        margin-bottom: 10px;
+      }
+      
+      .our_community_p {
+        font-weight: normal;
+        font-size: 14px;
+        line-height: 140%;
+        display: flex;
+        align-items: flex-end;
+        text-align: center;
+        color: #4E4E4E;
+        width: 298px;
+        height: 80px;
+      }
+      
+      .slider_nav {
+        margin-top: 80px;
+        margin-left: 650px;
+        width: 79px;
+        height: 20px;
+        left: 1252px;
+        top: 80px;
+      }
+      
+      .our_community_list {
+        display: flex;
+        padding-top: 20px;
+        padding-bottom: 140px;
+      }
+      
+      .our_community_1 {
+        width: 407px;
+        height: 244px;
+        margin-left: 139px;
+        margin-right: 30px;
+      }
+      
+      .our_community_2 {
+        width: 407px;
+        height: 244px;
+        margin-right: 30px;
+      }
+      
+      .our_community_slider{
+        overflow: hidden;
+      }
+      
+      .arr_left, .arr_right {
+        width: 8px;
+        height: 8px;
+        color: #373737;
+        text-decoration: none;
+      }
+      
+      .arr_left:hover, .arr_left:focus, .arr_left:active, .arr_right:hover, .arr_right:focus, .arr_right:active {
+        text-decoration: underline;
+        color: #000000;
+      }
