feat: add section 6 style

--- a/css/style.css
+++ b/css/style.css
@@ -497,3 +497,136 @@ html {
         align-items: flex-end;
         color: #373737;
       }
+
+      .download {
+        background: url(../assets/img/background-2.jpg) no-repeat center;
+        background-size: cover;
+      }
+      
+      .download_wrapper {
+        text-align: center;
+      }
+      
+      .download_h1 {
+        padding-top: 120px;
+        font-weight: bold;
+        font-size: 24px;
+        line-height: 28px;
+        text-align: center;
+        letter-spacing: 1px;
+        text-transform: uppercase;
+        color: #373737;
+        margin: 0px 670px 20px 668px;
+      }
+      
+      .download_p{
+        width: 483px;
+        height: 40px;
+        font-weight: normal;
+        font-size: 14px;
+        line-height: 140%;
+        text-align: center;
+        color: #4E4E4E;
+        margin: 0px 558px 30px 598.5px;
+      }
+      
+      .apple_form, .play_market_form {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+      }
+      
+      .download_buttons {
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+        margin: 0px 597px 180px 597px
+      }
+      
+      .button_apple {
+        position: relative;
+        width: 188px;
+        height: 50px;
+        left: 0px;
+        top: 0px;
+        background: #00AFDB;
+        border-radius: 0px;
+        border: 0;
+        font-weight: bold;
+        font-size: 14px;
+        line-height: 16px;
+        display: flex;
+        align-items: flex-end;
+        justify-content: center;
+        text-transform: uppercase;
+        color: #FFFFFF;
+        text-decoration: none;
+        padding: 18px 78px 16px 19px;
+        margin-right: 30px;
+      }
+      
+      .button_apple::after {
+        content: "";
+        position: absolute;
+        width: 60px;
+        height: 50px;
+        right: 0px;
+        top: 0px;
+        border-radius: 0px;
+        border: 0;
+        background-color: #009CC2;
+        background-image: url(../assets/img/icon-apple.svg);
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: 17px 20px;
+      
+       }
+      
+       .button_apple:hover, .button_apple:focus, .button_apple:active{
+        background: #0b86a5;
+        background-image: #0b86a5;
+      }
+      
+      .button_android {
+        position: relative;
+        width: 188px;
+        height: 50px;
+        left: 0px;
+        top: 0px;
+        background: #00AFDB;
+        border-radius: 0px;
+        border: 0;
+        font-weight: bold;
+        font-size: 14px;
+        line-height: 16px;
+        display: flex;
+        align-items: flex-end;
+        justify-content: center;
+        text-transform: uppercase;
+        color: #FFFFFF;
+        text-decoration: none;
+        padding: 18px 75px 16px 17px;
+      }
+      
+      .button_android::after {
+        content: "";
+        position: absolute;
+        width: 60px;
+        height: 50px;
+        right: 0px;
+        top: 0px;
+        border-radius: 0px;
+        border: 0;
+        background-color: #009CC2;
+        background-image: url(../assets/img/icon-android.svg);
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: 17px 20px;
+       }
+      
+       .button_android:hover, .button_android:focus, .button_android:active{
+        background: #0b86a5;
+        background-image: #0b86a5;
+      }
+    
