--- a/css/style.css
+++ b/css/style.css
@@ -630,3 +630,91 @@ html {
         background-image: #0b86a5;
       }
     
+      .footer {
+        background-color: #000000;
+        width: 100%;
+      }
+      
+      .footer_wrapper {
+        width: 1600px;
+        height: 184px;
+        padding-top: 65px;
+        padding-bottom: 91px;
+      }
+      
+      .footer_links {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+      }
+      
+      .footer_list {
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: space-around;
+      }
+      
+      .credits {
+        position: relative;
+        margin-right: 0px;
+        margin-right: 40px;
+      }
+      
+      .credits::after {
+        content: "";
+        position: absolute;
+        width: 1px;
+        height: 8px;
+        background-color: #4E4E4E;
+        background-position: bottom;
+        top: 5px;
+        margin-left: 20px;
+        border-right: 0;
+      }
+      
+      .privacy {
+        position: relative;
+        margin-right: 40px;
+      }
+      
+      .privacy::after {
+        content: "";
+        position: absolute;
+        width: 1px;
+        height: 8px;
+        background-color: #4E4E4E;
+        background-position: bottom;
+        top: 5px;
+        margin-left: 20px;
+        border-right: 0;
+      }
+      
+      .footer_link_nav {
+        font-weight: normal;
+        font-size: 14px;
+        line-height: 140%;
+        color: #FFFFFF;
+        opacity: 0.98;
+        text-decoration: none;
+      }
+      
+      .footer_link_rss {
+        font-weight: normal;
+        font-size: 14px;
+        line-height: 140%;
+        text-align: center;
+        color: #818181;
+        text-decoration: none;
+      }
+      
+      .footer_logo {
+        margin-left: 15px;
+      }
+      
+      .footer_link_nav:hover, .footer_link_nav:focus, .footer_link_nav:active, .footer_link_rss:hover, .footer_link_rss:focus, .footer_link_rss:active {
+        opacity: 100%;
+        text-decoration: underline;
+      }
+      
+      
